[B]Version 0.1.2[/B]

[I]06-08-2014[/I]
- 
- 
- Made a Fun little wide open map for testing movement coding and such.
- Some slight straight-directional Monster Movement within so much distance of the user.  Currently no diagnal movement.  Currently Monsters only see in a straight line.  Currently Monsters don't start a battle with you, unless you move onto their position.
- Text Map's View Distance.
- Extra Layer of Images for Floor Graphic underneath transparent game graphics.  This way other floor/path styles can be used at times.
- Customizable Graphic,Sound,Text Message settings in map files.  Some settings are customizable, but not all at this time.
- Added Additional Graphics.
- Initial Setup for Direction the User is facing, for later coding.
- Fixed some graphics.
- Changed some graphics.

[I]06-??-2014[/I]
- ....
- ....

[B]Version 0.1.0[/B]
- Many advancements.

[I]06-??-2014[/I]
- ....
- ....

[I]05-??-2014[/I]
- ....
- ....

[B]Version 0.0.1[/B]
- Added HUB HUG Movement Series Fanart Graphic by Marquerite.
- Added Some Graphic(s) by TheHighway.
- Initial Build.
