@@ -2,6 +2,7 @@
 ### import splash_highway as splash
 ### splash.do_My_Splash('http://xbmchub.com/images/index-logo.png',5); 
 ### splash.do_My_Splash('http://xbmchub.com/images/index-logo.png',2,True,100,100,600,400); 
+### splash.do_My_TextSplash("Hello Player.\n",artj('text_splash01'),8,TxtColor='0xFFFFFFFF',Font='font14',BorderWidth=70); 
 ### ####################################################################### ### 
 import xbmc,xbmcgui,time
 ### ####################################################################### ### 
